--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Tauri + React + Typescript</title>
 </head>
 
-<body id="root">
+<body>
+  <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
