--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <title>Tauri + React + Typescript</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body style="overflow: hidden;">
+  <div id="root">
+    <div style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
+      <h1 style="font-family: monospace; font-weight: bold; font-size: 70px; opacity: 0.5; color: white;">
+        <i>Loading ...</i>
+      </h1>
+    </div>
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
