fix: Startup loading screen text can be selected.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body style="overflow: hidden;">
   <div id="root">
     <div style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
-      <h1 style="font-family: monospace; font-weight: bold; font-size: 70px; opacity: 0.5; color: white;">
+      <h1
+        style="font-family: monospace; font-weight: bold; font-size: 70px; opacity: 0.5; color: white; user-select: none; -webkit-user-select: none;">
         <i>Loading ...</i>
       </h1>
     </div>
