--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body style="overflow: hidden;">
   <div id="root">
-    <div style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
+    <div style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center; background-color: #292929;">
       <h1
         style="font-family: monospace; font-weight: bold; font-size: 70px; opacity: 0.5; color: white; user-select: none; -webkit-user-select: none;">
         <i>Loading ...</i>
