feat: Changing transparency color.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #292929;">
 
 <head>
   <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 
 <body style="overflow: hidden;">
   <div id="root">
-    <div style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center; background-color: #292929;">
+    <div style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
       <h1
         style="font-family: monospace; font-weight: bold; font-size: 70px; opacity: 0.5; color: white; user-select: none; -webkit-user-select: none;">
         <i>Loading ...</i>
